--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,5 @@
-rootProject.name = 'as4moco'
+plugins {
+    id 'com.alexvasilkov.git-dependencies' version '2.0.4'
+}
 
+rootProject.name = 'as4moco'
