--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
+
+# for git remote plugin
+/libs
