--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-cli/commons-cli
     implementation group: 'commons-cli', name: 'commons-cli', version: '1.5.0'
 
+    implementation 'org.apache.commons:commons-csv:1.10.0'
+
+
 }
 
 git {
